# ladder_dogs_discord_bot

./: .git-blame-ignore-revs  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  docker_entrypoint.sh  pyproject.toml  run-bot.sh  update-pipenv-lock.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yml
alembic/: README  env.py
alembic/versions/: 33c7d5d10a35_add_settings_for_meta_rename_and_.py  60cf45e1ea54_add_a_setting_for_pinning_initial_.py  63a1fe96802f_adding_hunt_data_to_database.py  735750092b40_add_hunt_round_unique_constraints.py  8c5542d2cd84_add_a_starter_sheet.py  8e56c70e52e4_initial_revision.py  b8b8a390aa12_add_separate_timestamp_for_requesting_.py  d9415db923e5_move_hunt_settings_to_a_new_table.py  ea4259733a37_add_table_for_rounds.py  ee98b77c7cec_add_foreign_keys.py  f17dd3158459_moving_settings_from_hunt_to_guild.py  ff7c50e73243_add_table_for_puzzle_data.py
bot/: __init__.py  base_cog.py  splat_store_cog.py
bot/cogs/: channel_management.py  guild_management.py  hunt_management.py  puzzle_management.py  puzzles.py  puzzles_gsheet.py  settings.py  utility.py
bot/data/: puzzle_db.py
bot/database/: __init__.py
bot/database/models/: __init__.py  guilds.py  hunt_settings.py  puzzle_data.py  round_data.py
bot/scripts/gdrive/: create_folder.py  rename_file.py
bot/scripts/puzzles/: pack_data.py  unpack_data.py
bot/utils/: config.py  gdrive.py  gsheet.py  gsheet_nexus.py  puzzle_settings.py  puzzles_data.py  puzzles_db.py  urls.py
data/1183842257498022039/: settings.json
data/1183842257498022039/1183876496885043340/: 1183876497417711768.json  1183876698303901696.json
dev/: ruff.sh  update-pipenv-lock.sh
tests/: test_gsheet.py  test_puzzle_data.py
